# pour

./: CMakeLists.txt  README.md  build_all.cmd  build_clang.cmd  build_clang_posix.cmd  build_mingw.cmd  build_mingw64.cmd  build_mingw64_posix.cmd  build_mingw_wrapper.cmd  build_msvc.cmd  build_msvc_posix.cmd  open_msvc.cmd  pour.cmd
data/: functions.lua
data/cmake/DrunkFly/: Common.cmake  StdBool.cmake  StdInt.cmake
data/cmake/DrunkFly/stdbool/: stdbool.h
data/cmake/DrunkFly/stdint/pstdint/: pstdint.h  stdint.h
data/cmake/DrunkFly/stdint/sys_types/: stdint.h
data/targets/html5/: emsdk_3.1.50.lua  emsdk_4.0.14.lua
data/targets/linux_x64/: clang_3.5.0.lua
data/targets/linux_x86/: egcs_1.1.2.lua
data/targets/msdos/: djgpp_12.2.0.lua
data/targets/win32/: borland_4.5.2.lua  clang_4.0.0.lua  mingw_4.4.0.lua  mingw_8.1.0.lua  msvc_2.0.lua  msvc_2022.lua  msvc_4.1.lua  watcom_10.0a.lua
data/targets/win64/: mingw_8.1.0.lua  msvc_2022.lua
lib/: CMakeLists.txt
lib/lua/: CMakeLists.txt  lauxlib.c  lauxlib.h  loadlib.c  luac.c
src/: CMakeLists.txt  _entry.c  _main.c  main.c  main.h  pour.h  script.c  script.h
src/common/: byteswap.h  common.h  console.c  console.h  dirs.c  dirs.h  env.c  env.h  exec.c  exec.h  file.c  file.h  script.c  script.h  utf8.c  utf8.h
src/dosbox/: dosbox.c  dosbox.h  dosbox.opt
src/grp/: grpfile.c  grpfile.h
src/mkdisk/: bootcode.c  bootcode.h  disk_config.c  disk_config.h  ext2.c  ext2.h  ext2_defs.h  ext2read.c  ext2read.h  fat.c  fat.h  fat_defs.h  mbr.c  mbr.h  mbr_defs.h  mkdisk.c  mkdisk.h  vhd.c  vhd.h  vhd_defs.h  write.c  write.h
src/patch/: patch.c  patch.h
src/pour/: build.c  build.h  install.c  install.h  main.c  main.h  package.c  package.h  pour.c  pour.h  pour_lua.c  pour_lua.h  run.c  run.h  script.c  script.h
src/pour_wrapper/: CMakeLists.txt  pour_wrapper_windows.c  pour_wrapper_windows.ld
tools/: .gitignore  clang-4.0.0.cmd  cmake-3.31.4.cmd  cmake-3.5.2.cmd  mingw-4.4.0-32.cmd  mingw440-32.cmd  ninja.cmd
